--- a/package.json
+++ b/package.json
@@ -65,7 +65,24 @@
       "next@>=15.5.0-canary.0 <15.5.7": ">=15.5.7",
       "next@>=15.5.1-canary.0 <15.5.8": ">=15.5.8",
       "qs@<6.14.1": ">=6.14.1",
-      "hono@<4.11.4": ">=4.11.4"
+      "hono@<4.11.4": ">=4.11.4",
+      "devalue@>=5.1.0 <5.6.2": ">=5.6.2",
+      "devalue@>=5.3.0 <=5.6.1": ">=5.6.2",
+      "tar@<=7.5.2": ">=7.5.3",
+      "tar@<=7.5.3": ">=7.5.4",
+      "lodash-es@>=4.0.0 <=4.17.22": ">=4.17.23",
+      "lodash@>=4.0.0 <=4.17.22": ">=4.17.23",
+      "seroval@<=1.4.0": ">=1.4.1",
+      "seroval@<1.4.1": ">=1.4.1",
+      "diff@<4.0.4": ">=4.0.4",
+      "diff@>=6.0.0 <8.0.3": ">=8.0.3",
+      "undici@<6.23.0": ">=6.23.0",
+      "next@>=15.6.0-canary.0 <16.1.5": ">=16.1.5",
+      "next@>=16.0.0-beta.0 <16.1.5": ">=16.1.5",
+      "hono@<4.11.7": ">=4.11.7",
+      "next@>=16.1.0-canary.0 <16.1.5": ">=16.1.5",
+      "next@>=16.0.0-beta.0 <16.0.11": ">=16.0.11",
+      "tar@<7.5.7": ">=7.5.7"
     },
     "onlyBuiltDependencies": [
       "@swc/core",
